[package]
name = "server"
version = "0.1.0"
authors = ["Louis Tarvin <lt@nivrat.com>", "Louis de Wardt <contact@louis.dewardt.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix = "0.9"
actix-web-actors = "2.0"
actix-rt = "1.0.0"
rand = "0.7"
actix-files = "0.2.1"
clap = { version = "2.33.0", features = ["yaml"] }
log = "0.4"
env_logger = "0.7"
flexi_logger = { version = "0.15", features = ["ziplogs"] }
